--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,13 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="/syllabus/">Syllabus</a>
-                </li>
-                <li>
-                    <a href="/policies/">Policies</a>
-                </li>
-                <li>
-                    <a href="/assessments/">Assignment guide</a>
+                    <a href="/nomenclature/">Nomenclature guide</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
