--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
 
 <!-- Header -->
 {% if page.image %}<div class="intro-header" style="background: url(../img/{{ page.image }}) no-repeat center center;">
-{% else %}<div class="intro-header" style="background: url(../img/synapse.jpg) no-repeat center center;">
+{% else %}<div class="intro-header" style="background: url(../img/blackboard.jpg) no-repeat center center;">
 {% endif %}
 
     <div class="container">
