--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -15,7 +15,10 @@
                     </li>
                     {% endfor %}
                         <li>
-                            <a href="mailto:kris.shaffer@colorado.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
+                            <a href="http://www.colorado.edu/music/departments/theory" class="btn btn-default btn-lg"><i class="fa fa-laptop-o fa-fw"></i> <span class="network-name">website</span></a>
+                        </li>
+                        <li>
+                            <a href="mailto:music.theory@colorado.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
                         </li>
                 </ul>
             </div>
