--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -18,7 +18,7 @@
                             <a href="http://www.colorado.edu/music/departments/theory" class="btn btn-default btn-lg"><i class="fa fa-laptop fa-fw"></i> <span class="network-name">website</span></a>
                         </li>
                         <li>
-                            <a href="mailto:music.theory@colorado.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
+                            <a href="mailto:yonatan.malin@colorado.edu" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">email</span></a>
                         </li>
                 </ul>
             </div>
